# Keylogger

./: pyproject.toml
client/: Dockerfile  client.py  keylogger.py
server/: Dockerfile  server.py
