[project]
name = "keylogger"
version = "0.1.0"
description = ""
authors = [
    {name = "Kitsune ^_^",email = "akito.merkulov@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard (>=0.13.5,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
